--- a/Assets/style.css
+++ b/Assets/style.css
@@ -645,6 +645,7 @@ footer .main-text{
         padding: 0 10px 0px 10px;
         overflow: hidden;
     }
+    
 
     .hero-area {
         height: 100%;
@@ -828,6 +829,9 @@ footer .main-text{
     }
     /*--------LANDING PAGE--------*/
     
+    .bg-mountain{
+        background: none;
+    }
     .hero-area {
         height: 100%;
         align-items: center;
@@ -837,10 +841,10 @@ footer .main-text{
         margin: 0 auto;
         /* outline: red 1px solid; */
         padding: 0;
-        margin: 0;
+        margin: 0 auto;
         position: absolute;
         display: block;
-        top: 30vh;
+        top: 40vh;
         
     }
 
