--- a/Assets/style.css
+++ b/Assets/style.css
@@ -507,7 +507,7 @@ hr{
 }
 
 #website-project{
-    order: 4;
+    order: -1;
 }
 
 #zoom-project{
@@ -598,7 +598,82 @@ hr{
     font-weight: 300px;
 }
 
-/*------------New Projetct Layout--------------*/
+/*------------New Projetct Layout CSS GRID--------------*/
+.project-card-grid{
+    width: 80vw;
+    height: 50vh;
+    min-height: 300px;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    border-radius: 10px;
+    background-color: black;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    /* outline: 1px red solid; */
+    overflow: hidden;
+    margin: auto;
+    margin-bottom: 12vh;
+    box-shadow: 0px 10px 12px rgba(0, 0, 0, 0.447); 
+    transition: var(--transition-speed);
+}
+
+.project-card-grid:hover{
+    box-shadow: 0px 0px 12px 2px var(--secondary-color);
+    transform: scale(1.05);
+    color: var(--primary-color);
+} 
+
+
+.description-container-grid{
+    grid-area: 1 / 2 / -1 / 3 ;
+    padding: 20px;
+}
+.description-container-grid .main-text{
+    font-size: 2rem;
+    color: white;   
+    align-self: end;
+
+    /* outline: 1px red solid; */
+    height: 100%;
+}
+
+.image-container-grid{
+    grid-area: 1 / 1 / -1 / 2;
+    overflow: hidden;
+}
+
+.project-image-grid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* outline: 3px red solid; */
+}
+
+.project-card-grid:hover .project-image-grid{
+    transform: scale(1.03);
+    transition: 2s ease-out 0.1s;
+
+} 
+
+.grid{
+    text-align: left !important;
+    margin-bottom: 1rem;
+}
+
+@media only screen and (max-width: 600px){
+    .project-card-grid{
+        width: 80vw;
+        height: 50vh;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: repeat(1, 1fr);
+        background-color: black;
+        background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+ }
+
+}
+
+/*------------New Projetct Layout CSS GRID--------------*/
 
 
 /*------------FOOTER/CONTACT SECTION--------------*/
